# mm-compiler

./: .gitignore  CHANGELOG.md  Parser.info  README.md  help.txt  mm-compiler.cabal  test.nm  test2.nm
data/: Parser.info  help.txt
doc/manual/: main.tex
src/: Main.hs
src/Compiler/: Code.hs  Lexer.x  Masm.hs  Parser.info  Parser.y  Utils.hs
test/: channelfibo.mm  closure.mm  longtest2.mm  pi.mm  same.mm  say.mm  t2.mm  temp.mm  test.mm  test2.mm  vartest.mm
test/stmts/: fundecl.mm  scope.mm  vardecl.mm
test/stmts/exprs/: assign.mm  call.mm  closure.mm  go.mm  ifexpr.mm  list.mm  literals.mm  opexpr.mm  return.mm  whileexpr.mm
