cabal-version:      2.4
name:               mm-compiler
version:            0.1.0.0
synopsis:           A MicroMorpho compiler
description:        This is a bottom-up compiler for the programming language MicroMorpho
                    written in Haskell. It was produced during the course TÖL202M Þýðendur
                    in the University of Iceland on compiler design, taught by Snorri
                    Agnarsson in 2022.
bug-reports:        https://github.com/mrbjarksen/mm-compiler/issues
author:             Bjarki Baldursson Harksen
maintainer:         bjarki31@gmail.com

extra-source-files: README.md
data-dir:           data
data-files:         help.txt
                    Parser.info
                    morpho.jar

executable mm-compiler
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    other-modules:      Compiler.Lexer
                        Compiler.Parser
                        Compiler.Masm
                        Compiler.Utils
                        Paths_mm_compiler
    build-depends:      base ^>=4.15.1.0
                      , mtl
                      , text
                      , array
                      , containers
                      , parsec
                      , filepath
                      , process
                      , directory
    build-tool-depends: alex:alex
                      , happy:happy
